creating an index.html with some screenshots

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
         <link rel='stylesheet' href='style.css'>
     </head>
     <body>
-        
+        <nav id='navbar'>
+            <ul>
+                <li><a href='#welcome-section'>About</a></li>
+                <li><a href='#projects'>My work</a></li>
+                <li><a href=''>Contact</a></li>
+            </ul>
+        </nav>
+        <section id='welcome-section'>
+            <h1> My name is Patryk </h1>
+            <p>But you can call me studzin-sky</p>
+            <p>I'm a self-taught beggining web developer</p>
+        </section>
+        <section id='projects'>
+            <figure id='project-tile'>
+                <a href='https://codepen.io/studzin-sky/pen/NWRrRvQ'><img src='technical.png' alt='screenshot of a page'></a>
+                <figcaption>Technical Page</figcaption>
+            </figure>
+            <figure id='project-tile'>
+                <a href='https://codepen.io/studzin-sky/pen/ZEpOBEy'><img src='alfa.png' alt='screenshot of a page'></a>
+                <figcaption>Tribute Page</figcaption>
+            </figure>
+            <figure id='project-tile'>
+                <a href='https://codepen.io/studzin-sky/pen/NWRrbKx'><img src='product.png' alt='screenshot of a page'></a>
+                <figcaption>Product Page</figcaption>
+            </figure>
+            <figure id='project-tile'>
+                <a href='https://codepen.io/studzin-sky/pen/VwKjKJV'><img src='survey.png' alt='screenshot of a page'></a>
+                <figcaption>Survey Page</figcaption>
+            </figure>
+        </section>
     </body>
 </html>
