finishing index.html

--- a/index.html
+++ b/index.html
@@ -19,22 +19,34 @@
             <p>I'm a self-taught beggining web developer</p>
         </section>
         <section id='projects'>
+            <h2>There are my previous projects:</h2>
             <figure id='project-tile'>
-                <a href='https://codepen.io/studzin-sky/pen/NWRrRvQ'><img src='technical.png' alt='screenshot of a page'></a>
+                <a href='https://codepen.io/studzin-sky/pen/NWRrRvQ' target='_blank'><img src='technical.png' alt='screenshot of a page'></a>
                 <figcaption>Technical Page</figcaption>
             </figure>
             <figure id='project-tile'>
-                <a href='https://codepen.io/studzin-sky/pen/ZEpOBEy'><img src='alfa.png' alt='screenshot of a page'></a>
+                <a href='https://codepen.io/studzin-sky/pen/ZEpOBEy' target='_blank'><img src='alfa.png' alt='screenshot of a page'></a>
                 <figcaption>Tribute Page</figcaption>
             </figure>
             <figure id='project-tile'>
-                <a href='https://codepen.io/studzin-sky/pen/NWRrbKx'><img src='product.png' alt='screenshot of a page'></a>
+                <a href='https://codepen.io/studzin-sky/pen/NWRrbKx' target='_blank'><img src='product.png' alt='screenshot of a page'></a>
                 <figcaption>Product Page</figcaption>
             </figure>
             <figure id='project-tile'>
-                <a href='https://codepen.io/studzin-sky/pen/VwKjKJV'><img src='survey.png' alt='screenshot of a page'></a>
+                <a href='https://codepen.io/studzin-sky/pen/VwKjKJV' target='_blank'><img src='survey.png' alt='screenshot of a page'></a>
                 <figcaption>Survey Page</figcaption>
             </figure>
         </section>
+        <section id='contact'>
+           <h2>Give me a shout if you want to talk shop! </h2>
+           <div id='contact list'>
+               <a id='profile-link' href='https://github.com/studzin-sky' target='_blank'><img src='GitHub-Mark.png' alt='github logo'></a>
+               <a id='profile-link' href='https://www.freecodecamp.org/studzin-sky' target='_blank'><img src='freecodecamp.png' alt='free code camp logo'></a>
+               <a id='profile-link' href='mailto: the.stucc@gmail.com?subject=Hello%20studzin-sky&body=let%20us%20talk!'><img src='email.png' alt='email logo'></a>
+           </div>
+        </section>
     </body>
+    <footer>
+        <p>This is kind of a fake page, although actually it is not.</p>
+    </footer>
 </html>
