--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
         <section id='contact'>
            <h2>Give me a shout if you want to talk shop! </h2>
-           <div id='contact list'>
+           <div id='contact_list'>
                <a id='profile-link' href='https://github.com/studzin-sky' target='_blank'><img src='GitHub-Mark.png' alt='github logo'></a>
                <a id='profile-link' href='https://www.freecodecamp.org/studzin-sky' target='_blank'><img src='freecodecamp.png' alt='free code camp logo'></a>
                <a id='profile-link' href='mailto: the.stucc@gmail.com?subject=Hello%20studzin-sky&body=let%20us%20talk!'><img src='email.png' alt='email logo'></a>
